resolving path issues

--- a/public/app/views/help.html
+++ b/public/app/views/help.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>fundsOfHope.org::Partners Of Growth</title>
+  <title>fundsOfHope.org::Help</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -19,12 +19,13 @@
       margin: auto;
   }
   </style>
+ 
  <script>
  
- $("#slideshow1 > div:gt(0)").hide();
+ $("#slideshow3 > div:gt(0)").hide();
 
 setInterval(function() { 
-  $('#slideshow1 > div:first')
+  $('#slideshow3 > div:first')
     //.next()
 	.fadeOut(1000)
     .next()
@@ -32,28 +33,12 @@ setInterval(function() {
 	.next()
     .end()
 	//.next()
-    .appendTo('#slideshow1');
+    .appendTo('#slideshow3');
 	//.next()
 },  3000);
 
  </script>
-<script>
- 
- $("#slideshow2 > div:gt(0)").hide();
-
-setInterval(function() { 
-  $('#slideshow2 > div:first')
-    .fadeOut(1000)
-    .next()
-    .fadeIn(1000)
-    .next()
-	.end()
-    .appendTo('#slideshow2');
-},  3000);
-
- </script>
- 
- </head>
+</head>
 <body>
 
 
@@ -254,66 +239,55 @@ setInterval(function() {
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>Our Partners</h1>
-                    <p>Collaborating To Achieve Our Goals</p>
+                    <h1>Help</h1>
+                    <p>Lets Make A Difference Together</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active">Partners Of Growth</li>
+                        <li class="active">Help</li>
                     </ul>
                 </div>
             </div>
         </div>
 </div>
 
+
+
+
 <div class="jumbotron" style="background-color: #c7c5c2;">
-<div class="container" style="color: #6c4837;">
-<div class="col-sm-3 col-md-6">	
-<h2>Media Partners</h2>
-<p>Helping Us Spread Our Message</p>
+	<div class="container" style="color: #6c4837;">
 
-<dl>
- <dt>Print Partners</dt>
-  <dd>The New York Times</dd>
-  <dd>The Economic Times</dd>
-</dl>
+	<div class="col-sm-3 col-md-6 col-lg-8">	
+<h2>As Volunteers And Donors</h2>
+<p>Browse Through Our Registered Projects And Stay Connected</p>
 
-<dl>
-  <dt>Media Partners</dt>
-  <dd>BBC</dd>
-  <dd>CNN</dd>
-</dl>
 
-</div>
-<div class="col-sm-3 col-md-6">	
-
-<div id="slideshow1">
+<div id="slideshow3">
    <div>
-   <img src="images/bbc1.png" alt="BBC" width="100%" height="100%">
+   <img src="app/views/images/beavol/1.jpg" alt="BBC" width="100%" height="100%">
    </div>
 
      <div>
-   <img src="images/bbc1.png" alt="BBC" width="100%" height="100%">
+   <img src="app/views/images/beavol/1.jpg" alt="BBC" width="100%" height="100%">
    </div>
    
  <div>
-     <img src="images/cnn.png" alt="CNN" width="100%" height="100%">
+     <img src="app/views/images/beavol/2.jpg" alt="CNN" width="100%" height="100%">
    </div>
    <div>
-     <img src="images/et.cms" alt="ET" width="100%" height="100%">
+     <img src="app/views/images/beavol/3.jpg" alt="ET" width="100%" height="100%">
    </div>
       <div>
-     <img src="images/nyt.jpg" alt="NYT" width="100%" height="100%">
+     <img src="app/views/images/beavol/4.jpg" alt="NYT" width="100%" height="100%">
    </div>
    
 </div>
 
-  
+	</div>
 
 
-</div>
-</div>
+	</div>
 </div>
 
 
@@ -324,14 +298,22 @@ setInterval(function() {
 
 
 
-<div class="col-sm-3 col-md-6 pull-right">	
-<h2>Our Pro Bono Consulting Partner</h2>
-<p>Helping Us Achieve Our Objectives More Efficiently </p>
+
+
+<div class="col-sm-3 col-md-6">	
+<h2>As Registered NGOs</h2>
+<p>Browse Through Our Projects And Stay Connected</p>
+
+
+			
+	<div class="embed-responsive embed-responsive-16by9">  
+<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vGOgyaSrJko"></iframe>
+	  </div>	
+
+
 </div>
 
-<div class="col-sm-3 col-md-6 pull-right">	
-<img src="images/deloitte.jpg" alt="NYT" width="90%" height="80%" class="img-rounded" style="border: shade">
-</div>
+
 </div>
 
 </div>
@@ -349,93 +331,24 @@ setInterval(function() {
         <div class="row">
 
             <div class="col-sm-3 col-md-6">
-                <h2>Our Cooperate Philanthropists</h2>
-				
-<dl>
-  <dt>Driving Partners</dt>
-  <dd>Lamborghini</dd>
-  <dd>BMW</dd>
-  <dd>Mini</dd>
-</dl>
-<dl>
-  <dt>Clothing Partners</dt>
-  <dd>Emporio Armani</dd>
-  <dd>Zara</dd>
-</dl>
-<dl>
-  <dt>Technology Partners</dt>
-  <dd>Microsoft</dd>
-  <dd>Vodafone</dd>
-  <dd>Zomato</dd>
-  <dd>Sony</dd>
-</dl>		
-<dl>
-  <dt>Beverage Partner</dt>
-  <dd>Coca Cola</dd>
-</dl>
-<dl>
-  <dt>Banking Partner</dt>
-  <dd>HSBC</dd>
-</dl>
-
-<dl>
-  <dt>Be A Proud Partner Today</dt>
-  <dd><a href="beap.html">Click Here</a></dd>
-</dl>
-
-				
+               <h2>As A Coorporate </h2>
+<p>Register As a Partner And Encourage Your Employees</p>
+			
+		<div class="embed-responsive embed-responsive-16by9">  
+<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/R_A4lTYnbzQ"></iframe>
+	  </div>
+			
+			
+			
 				</div>
 
-				
-<div class="col-sm-3 col-md-6">
-<div id="slideshow2">
-     <div>
-   <img src="images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-<div>
-   <img src="images/plogos/12.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/8.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/16.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/3.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/7.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/11.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/15.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/17.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/14.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   <div>
-   <img src="images/plogos/6.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   
-</div>
-     </div>
-            
+           
 
 
 </div>
 </div>
 </div>
 </div>
-
 
 
 
@@ -517,6 +430,7 @@ setInterval(function() {
 
  </div>
 </div>
+
 
 
 
