--- a/public/app/views/faq-ngomodel.html
+++ b/public/app/views/faq-ngomodel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>fundsOfHope.org::Help</title>
+  <title>fundsOfHope.org::FAQs:NGO Model</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -20,24 +20,6 @@
   }
   </style>
  
- <script>
- 
- $("#slideshow3 > div:gt(0)").hide();
-
-setInterval(function() { 
-  $('#slideshow3 > div:first')
-    //.next()
-	.fadeOut(1000)
-    .next()
-    .fadeIn(1000)
-	.next()
-    .end()
-	//.next()
-    .appendTo('#slideshow3');
-	//.next()
-},  3000);
-
- </script>
 </head>
 <body>
 
@@ -239,117 +221,139 @@ setInterval(function() {
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>Help</h1>
-                    <p>Lets Make A Difference Together</p>
+                    <h1>FAQs</h1>
+                    <p>Helping You Understand Us Better</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active">Help</li>
+                        <li class="active">FAQs</li>
                     </ul>
                 </div>
             </div>
         </div>
 </div>
 
-
-
-
-<div class="jumbotron" style="background-color: #c7c5c2;">
-	<div class="container" style="color: #6c4837;">
-
-	<div class="col-sm-3 col-md-6 col-lg-8">	
-<h2>As Volunteers And Donors</h2>
-<p>Browse Through Our Registered Projects And Stay Connected</p>
-
-
-<div id="slideshow3">
-   <div>
-   <img src="images/beavol/1.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-
-     <div>
-   <img src="images/beavol/1.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   
- <div>
-     <img src="images/beavol/2.jpg" alt="CNN" width="100%" height="100%">
-   </div>
-   <div>
-     <img src="images/beavol/3.jpg" alt="ET" width="100%" height="100%">
-   </div>
-      <div>
-     <img src="images/beavol/4.jpg" alt="NYT" width="100%" height="100%">
-   </div>
-   
-</div>
-
-	</div>
-
-
-	</div>
+<div class="col-sm-2 col-md-4 col-lg-2">
+<ul class="nav nav-pills nav-stacked">
+  <li role="presentation"><a href="faq.html">How To Help</a></li>
+  <li role="presentation" class="active"><a href="faq-ngomodel.html">NGO Model</a></li>
+  <li role="presentation"><a href="faq-ourpartners.html">About Our Partners</a></li>
+  <li role="presentation"><a href="faq-aboutus.html">About Us</a></li>
+  <li role="presentation"><a href="faq-searchqueries.html">Search Queries</a></li>
+  <li role="presentation"><a href="faq-writetous.html">Write To Us</a></li>
+  </ul>
 </div>
 
 
-<div class="jumbotron" style="background-color: #4c403c;">
+<div class="col-sm-3 col-md-6 col-lg-8">
+
+<div class="row">
+
+            <div class="col-lg-12">
+
+                <div id="accordion" class="panel-group">
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a href="#collapseOne" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                    Is this a real NGO?
+                  </a>
+                            </h4>
+                        </div>
+                        <div class="panel-collapse collapse" id="collapseOne" style="height: 0px;">
+                            <div class="panel-body">
+							Yes we are a real registered NGO.We are 100% non profit and help to regulate funds to other Big NGOs. 
+							</div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a href="#collapseTwo" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                    Why should I use this website to donate?
+                  </a>
+                            </h4>
+                        </div>
+                        <div class="panel-collapse collapse" id="collapseTwo" style="height: 0px;">
+                            <div class="panel-body">
+					Donating through and using our website gives you a better view of your contribution and helps you connect better.		
+							</div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a href="#collapseThree" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                    Why are similar NGOs listed on this website?
+                  </a>
+                            </h4>
+                        </div>
+                        <div class="panel-collapse collapse" id="collapseThree">
+                            <div class="panel-body">
+					Different NGOs are listed according to their projects on particular locations.		
+							</div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a href="#collapseFour" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                    How many NGOs are registered on this website?
+                  </a>
+                            </h4>
+                        </div>
+                        <div class="panel-collapse collapse" id="collapseFour">
+                            <div class="panel-body">
+							More than 25.
+							</div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a href="#collapseFive" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                    What are partners?
+                  </a>
+                            </h4>
+                        </div>
+                        <div class="panel-collapse collapse" id="collapseFive">
+                            <div class="panel-body">
+							Partners are big companies who regularly help us and pledge their employees to regularly volunteer.
+							</div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a href="#collapseSix" data-parent="#accordion" data-toggle="collapse" class="accordion-toggle collapsed">
+                Is the payment procedure safe?
+                  </a>
+                            </h4>
+                        </div>
+                        <div class="panel-collapse collapse" id="collapseSix">
+                            <div class="panel-body">
+                    Of course.
+							</div>
+                        </div>
+                    </div>
 
 
-<div class="container" style="color: #d9c1ba;">
+                </div>
 
+            </div>
 
-
-
-
-<div class="col-sm-3 col-md-6">	
-<h2>As Registered NGOs</h2>
-<p>Browse Through Our Projects And Stay Connected</p>
-
-
-			
-	<div class="embed-responsive embed-responsive-16by9">  
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vGOgyaSrJko"></iframe>
-	  </div>	
-
-
+        </div>
+  
+  <br>
+  
 </div>
-
-
-</div>
-
-</div>
-
-
-
-<div class="jumbotron" style="background-color: #ea8662;">
-<div class="container" style="color: #231d1a;">
- 
-
-
-
-<div class="container">
-
-        <div class="row">
-
-            <div class="col-sm-3 col-md-6">
-               <h2>As A Coorporate </h2>
-<p>Register As a Partner And Encourage Your Employees</p>
-			
-		<div class="embed-responsive embed-responsive-16by9">  
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/R_A4lTYnbzQ"></iframe>
-	  </div>
-			
-			
-			
-				</div>
-
-           
-
-
-</div>
-</div>
-</div>
-</div>
-
 
 
 <div class="jumbotron" style="background-color: #2c3e50; color:#c6c9cc">
