--- a/public/app/views/faq-searchqueries.html
+++ b/public/app/views/faq-searchqueries.html
@@ -9,9 +9,8 @@
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
- 	<script type="text/javascript" src="./angular.min.js"></script>
-	<script type="text/javascript" src="./app_script.js"></script>
-	<link src="./stylle_sheet.css"></link>
+ 	<script type="text/javascript" src="./angular.js"></script>
+	<script type="text/javascript" src="app_script.js"></script>
    <style>
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
@@ -250,37 +249,45 @@
 
 
 
-<div class="col-sm-3 col-md-6 col-lg-8">
+<div class="col-sm-3 col-md-6 col-lg-8"  style="color: #848484;">
 
 <div class="row">
 
-            <div class="col-lg-9">
-			<div ng-controller="mycontroller">
+            <div class="col-lg-9" >
+			<div ng-app: "myApp" ng-controller="namescontroller">
 				<div>
-					<h2>
+					<h2 style=" margin-left: 45%; font-size: 30px; font-family: sans serif;">
 						Search your questions here...
 					</h2>
-					<input type="text" placeholder="ask here....." value="" ng-model="test" style="width: 70%;"></input>
+					<input type="text" placeholder="ask here....." value="" ng-model="test" style="width: 90%; margin-left: 35%;"></input>
 				</div>
+        <br/>
 				<div>
-					<ul class="questions">
-						<li ng-repeat="x in ques | filter: test ">
-							{{(x.question| uppercase)}}
+					<ol class="questions">
+						<li style="margin-left: 35%; font-size: 20px;" ng-repeat="x in ques | filter: test | limitTo: 3">
+							{{(x.question| uppercase)}}<br/>
+              {{x.answer}}
 						</li>
-					</ul>
+					</ol>
 				</div>
-			</div>
-			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-			</div>
 			</div>
 			</div>
 
-			
+			</div>
+			</div>
+
+<div class="jumbotron" style="background-color: #2c3e50; color:#c6c9cc">
+<div class="container">
+<div class="col-sm-3 col-md-6 col-lg-8">
+<br><br><br><br><br><br><br><br><br><br><br>
+</div>
+</div>
+</div>			
 
 <div class="jumbotron" style="background-color: #2c3e50; color:#c6c9cc">
 <div class="container">
  <div class="row">
- <div class="col-md-3 col-sm-4" style="background-color: #2c3e50;">
+ <div class="col-md-3 col-sm-4" style="background-color: #2c3e50; ">
 
  <dl>
   <dt>Why Donate</dt>
