--- a/public/app/views/pog.html
+++ b/public/app/views/pog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>fundsOfHope.org::Share The Happiness</title>
+  <title>fundsOfHope.org::Partners Of Growth</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -19,8 +19,41 @@
       margin: auto;
   }
   </style>
+ <script>
  
-</head>
+ $("#slideshow1 > div:gt(0)").hide();
+
+setInterval(function() { 
+  $('#slideshow1 > div:first')
+    //.next()
+	.fadeOut(1000)
+    .next()
+    .fadeIn(1000)
+	.next()
+    .end()
+	//.next()
+    .appendTo('#slideshow1');
+	//.next()
+},  3000);
+
+ </script>
+<script>
+ 
+ $("#slideshow2 > div:gt(0)").hide();
+
+setInterval(function() { 
+  $('#slideshow2 > div:first')
+    .fadeOut(1000)
+    .next()
+    .fadeIn(1000)
+    .next()
+	.end()
+    .appendTo('#slideshow2');
+},  3000);
+
+ </script>
+ 
+ </head>
 <body>
 
 
@@ -215,87 +248,194 @@
 </div>
 
 
-
   <div class="jumbotron">
     
 
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <h1>Share The Happiness</h1>
-                    <p>Lets Come Together For A Better Today</p>
+                    <h1>Our Partners</h1>
+                    <p>Collaborating To Achieve Our Goals</p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="breadcrumb pull-right">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active">Share The Happiness</li>
+                        <li class="active">Partners Of Growth</li>
                     </ul>
                 </div>
             </div>
         </div>
 </div>
 
-
 <div class="jumbotron" style="background-color: #c7c5c2;">
+<div class="container" style="color: #6c4837;">
+<div class="col-sm-3 col-md-6">	
+<h2>Media Partners</h2>
+<p>Helping Us Spread Our Message</p>
 
-<div class="container" style="color: #231648">
+<dl>
+ <dt>Print Partners</dt>
+  <dd>The New York Times</dd>
+  <dd>The Economic Times</dd>
+</dl>
 
+<dl>
+  <dt>Media Partners</dt>
+  <dd>BBC</dd>
+  <dd>CNN</dd>
+</dl>
 
-            <div class="col-sm-3 col-md-8">
-	
-	
-			<h2>Make A Difference By Following Just 3 Easy Steps:</h2>
+</div>
+<div class="col-sm-3 col-md-6">	
 
-			<h3>1.Initiate</h3>
-			<h3>2.Explore And Contribute</h3>
-			<h3>3.Be A Part</h3>
-			
-			</div>
+<div id="slideshow1">
+   <div>
+   <img src="app/views/images/bbc1.png" alt="BBC" width="100%" height="100%">
+   </div>
 
-
-
-
-
-			</div>
-		
+     <div>
+   <img src="app/views/images/bbc1.png" alt="BBC" width="100%" height="100%">
+   </div>
+   
+ <div>
+     <img src="app/views/images/cnn.png" alt="CNN" width="100%" height="100%">
+   </div>
+   <div>
+     <img src="app/views/images/et.cms" alt="ET" width="100%" height="100%">
+   </div>
+      <div>
+     <img src="app/views/images/nyt.jpg" alt="NYT" width="100%" height="100%">
+   </div>
+   
 </div>
 
+  
+
+
+</div>
+</div>
+</div>
 
 
 <div class="jumbotron" style="background-color: #4c403c;">
 
-<div class="container" style="color: #251e1c;">
+
+<div class="container" style="color: #d9c1ba;">
 
 
-            <div class="col-sm-3 col-md-8 col-lg-10" style="background-color: #ea8662";>
-	
-	<h1>Initiate</h1>
-	
-	 <p>Make A Change By Taking Your FIRST STEP</p>
-	 
-	 <h2>Why:</h2>
-	 
-	  <h3>More Than 805 Million People Are Suffering From Hunger Today.</h3>
-	<div class="embed-responsive embed-responsive-16by9">  
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wDJjcL9Ya4c"></iframe>
-	  </div>
-	  <br>
-	  
-	  
-	   <h3>Way Too Many People Are Homeless Today</h3>
-  <img src="images/whyphoto/5.jpeg" alt="..." class="img-rounded" style="background-color: #f2e3ce; border;"></img>
-	  
-	  <h3>But Most Importantly To Break The Social Barriers Of Injustice</h3>
-	
-	
-	 <img src="images/whyphoto/1.jpg" alt="..." class="img-rounded" style="background-color: #f2e3ce;"></img>
-<br><br><br>
 
-	 </div>
-	  </div>
-	  
+<div class="col-sm-3 col-md-6 pull-right">	
+<h2>Our Pro Bono Consulting Partner</h2>
+<p>Helping Us Achieve Our Objectives More Efficiently </p>
+</div>
+
+<div class="col-sm-3 col-md-6 pull-right">	
+<img src="app/views/images/deloitte.jpg" alt="NYT" width="90%" height="80%" class="img-rounded" style="border: shade">
+</div>
+</div>
 
 </div>
+
+
+
+<div class="jumbotron" style="background-color: #ea8662;">
+<div class="container" style="color: #231d1a;">
+ 
+
+
+
+<div class="container">
+
+        <div class="row">
+
+            <div class="col-sm-3 col-md-6">
+                <h2>Our Cooperate Philanthropists</h2>
+				
+<dl>
+  <dt>Driving Partners</dt>
+  <dd>Lamborghini</dd>
+  <dd>BMW</dd>
+  <dd>Mini</dd>
+</dl>
+<dl>
+  <dt>Clothing Partners</dt>
+  <dd>Emporio Armani</dd>
+  <dd>Zara</dd>
+</dl>
+<dl>
+  <dt>Technology Partners</dt>
+  <dd>Microsoft</dd>
+  <dd>Vodafone</dd>
+  <dd>Zomato</dd>
+  <dd>Sony</dd>
+</dl>		
+<dl>
+  <dt>Beverage Partner</dt>
+  <dd>Coca Cola</dd>
+</dl>
+<dl>
+  <dt>Banking Partner</dt>
+  <dd>HSBC</dd>
+</dl>
+
+<dl>
+  <dt>Be A Proud Partner Today</dt>
+  <dd><a href="beap.html">Click Here</a></dd>
+</dl>
+
+				
+				</div>
+
+				
+<div class="col-sm-3 col-md-6">
+<div id="slideshow2">
+     <div>
+   <img src="app/views/images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+<div>
+   <img src="app/views/images/plogos/12.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/8.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/16.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/3.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/7.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/11.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/15.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/17.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/14.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   <div>
+   <img src="app/views/images/plogos/6.jpg" alt="BBC" width="100%" height="100%">
+   </div>
+   
+</div>
+     </div>
+            
+
+
+</div>
+</div>
+</div>
+</div>
+
 
 
 
