--- a/public/app/views/stheh.html
+++ b/public/app/views/stheh.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>fundsOfHope.org::Home</title>
+  <title>fundsOfHope.org::Share The Happiness</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../css/bootstrap.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+ <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-   <script src="../js/jquery.js"></script>
- <script src="../js/bootstrap.min.js"></script>
-<script src="../js/angular.js"></script>
-<script src="./controller.js"></script>
-<link src="./search_style.css"></link>
    <style>
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
@@ -219,258 +216,86 @@
 
 
 
- <!--  HOME IMAGES WHY?  --><!--  HOME IMAGES WHY?  --><!--  HOME IMAGES WHY?  --><!--  HOME IMAGES WHY?  --><!--  HOME IMAGES WHY?  --><!--  HOME IMAGES WHY?  -->
-<div class="imgslider1">
- <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active"> 
-	
-   <img src="images/carousel/bg-1.jpg" alt="one"> 
-
-	<div class="carousel-caption">
-    <h3>one</h3>
-    <p>one</p>
-  </div>
-	</div>
+  <div class="jumbotron">
     
-    <div class="item">
-     <img src="images/carousel/bg-2.jpg" alt="two">
-    <div class="carousel-caption">
-    <h3>two</h3>
-    <p>two</p>
-  </div>
-	</div>
 
-    <div class="item">
-     <img src="images/carousel/bg-3.jpg" alt="three"> 
-    <div class="carousel-caption">
-    <h3>three</h3>
-    <p>three</p>
-  </div>
-	</div>
-	<div class="item">
-     <img src="images/carousel/bg-4.jpg" alt="four"> 
-    <div class="carousel-caption">
-    <h3>four</h3>
-    <p>four</p>
-  </div>
-	</div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h1>Share The Happiness</h1>
+                    <p>Lets Come Together For A Better Today</p>
+                </div>
+                <div class="col-sm-6">
+                    <ul class="breadcrumb pull-right">
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active">Share The Happiness</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+</div>
+
+
+<div class="jumbotron" style="background-color: #c7c5c2;">
+
+<div class="container" style="color: #231648">
+
+
+            <div class="col-sm-3 col-md-8">
 	
-	</div>
+	
+			<h2>Make A Difference By Following Just 3 Easy Steps:</h2>
 
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+			<h3>1.Initiate</h3>
+			<h3>2.Explore And Contribute</h3>
+			<h3>3.Be A Part</h3>
+			
+			</div>
+
+
+
+
+
+			</div>
+		
 </div>
-</div>
 
-
-
-<!-- jumbotron -->
 
 
 <div class="jumbotron" style="background-color: #4c403c;">
 
-
-<div class="container">
-
-
-<div class="col-md-1 col-sm-1 col-lg-2">
-<a href="#" class="thumbnail">
-<img id="img1" src="images/ngologos/1b.jpg">
-</a>
-</div>
-
-<div class="col-md-1 col-sm-1 col-lg-2">
-<a href="#" class="thumbnail">
-<img id="img2" src="images/ngologos/2b.jpg">
-</a>
-</div>
-
-<div class="col-md-1 col-sm-1 col-lg-2">
-<a href="#" class="thumbnail">
-<img id="img3" src="images/ngologos/3b.jpg">
-</a>
-</div>
+<div class="container" style="color: #251e1c;">
 
 
-<div class="col-md-1 col-sm-1 col-lg-2">
-<a href="#" class="thumbnail">
-<img id="img4" src="images/ngologos/5b.jpg">
-</a>
-</div>
+            <div class="col-sm-3 col-md-8 col-lg-10" style="background-color: #ea8662";>
+	
+	<h1>Initiate</h1>
+	
+	 <p>Make A Change By Taking Your FIRST STEP</p>
+	 
+	 <h2>Why:</h2>
+	 
+	  <h3>More Than 805 Million People Are Suffering From Hunger Today.</h3>
+	<div class="embed-responsive embed-responsive-16by9">  
+<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wDJjcL9Ya4c"></iframe>
+	  </div>
+	  <br>
+	  
+	  
+	   <h3>Way Too Many People Are Homeless Today</h3>
+  <img src="app/views/images/whyphoto/5.jpeg" alt="..." class="img-rounded" style="background-color: #f2e3ce; border;"></img>
+	  
+	  <h3>But Most Importantly To Break The Social Barriers Of Injustice</h3>
+	
+	
+	 <img src="app/views/images/whyphoto/1.jpg" alt="..." class="img-rounded" style="background-color: #f2e3ce;"></img>
+<br><br><br>
 
-
-<div class="col-md-1 col-sm-1 col-lg-2">
-<a href="#" class="thumbnail">
-<img id="img5" src="images/ngologos/6b.jpg">
-</a>
-</div>
-
-
-
+	 </div>
+	  </div>
+	  
 
 </div>
-
-
-
-</div>
-
-
-<!-- app space-->
-  
-<div class="jumbotron" style="background-color: #ea8662;">
-<div class="container" style="color: #362f2d;">
-<div class="col-md-4 col-sm-6 col-lg-8">
-
-	<div id="main-container" ng-controller="namescontroller" ng-app="myApp">
-
-			<h3><label id="filter">Search Projects:</label></h3>
-<div class="col-sm-4 col-lg-7">
-			<p><input id="search-bar" placeholder="find projects" type="text/javascript" ng-model="test"></p>
-			</div>
-		<div class="col-sm-4 col-lg-12">
-
-					<div class="container-fluid">
-				 	<div class="row">
-					    
-						<div class="col-sm-4 col-lg-4" style="background-color:lavender; width: 40%;">
-					    	<h4 style="font-size: 3.5 vw;">
-					    		Project 1
-					    	</h4>
-					    	<img class="image" src="" alt="image">
-					    	<ul>
-								<li ng-repeat="a in custInfo" >
-										{{ (a.name[0].names | filter:test) + ', ' + a.name[0].country }}
-								</li>
-							</ul>
-					    </div>  
-						
-						<div class="col-sm-4 col-lg-1">
-						
-						</div>
-						
-					    <div class="col-sm-4 col-lg-4" style="background-color:lavenderblush;">
-					    	<h4>
-					    		Project 2
-					    	</h4>
-					    	<img class="image" src="" alt="image">
-					    	<ul>
-								<li ng-repeat="x in custInfo ">
-										{{ (x.name[1].names | filter:test)  + ', ' + x.name[1].country  }}
-								</li>
-							</ul>
-					    </div>
-						
-						<div class="col-sm-4 col-lg-1">
-						
-						</div>
-						
-						
-					    <div class="col-sm-4 col-lg-4" style="background-color:lavender; width: 40%;">
-					    	<h4>
-					    		Project 3
-					    	</h4>
-					    	<img class="image" src="" alt="image">
-					    	<ul>		    	
-								<li ng-repeat="x in custInfo ">
-										{{ (x.name[2].names | filter:test)  + ', ' + x.name[2].country }}
-								</li>
-							</ul>
-					    </div>
-					
-						
-					</div>
-				</div>
-				
-				
-				</div>
-				
-<div class="col-sm-4 col-lg-12">				
-				
-				
-	    		<div id="container-2" class="container-fluid">
-	    			<div class="row">
-	    				<div class="col-sm-4 col-lg-3" style="background-color:lavender; width: 40%;">
-	    					<h4>
-	    						Project 4
-	    					</h4>
-	    					<img class="image" src="" alt="image" >
-		    				<ul>
-								<li ng-repeat="x in custInfo ">
-										{{ (x.name[3].names | filter:test ) + ', ' + x.name[3].country }}
-								</li>
-							</ul>
-	    				</div>
-						
-						
-						<div class="col-sm-4 col-lg-1">
-						
-						</div>
-						
-						
-	    				<div class="col-sm-4 col-lg-3" style="background-color:lavenderblush; width: 40%;">
-	    					<h4>
-	    						Project 5
-	    					</h4>
-	    					<img class="image" src="" alt="image">
-	    					<ul>
-								<li ng-repeat="x in custInfo | filter:test">
-										{{ (x.name[4].names | filter:test) + ', ' + x.name[4].country  }}
-								</li>
-							</ul>	    					
-	    				</div>
-						
-						<div class="col-sm-4 col-lg-1">
-						
-						</div>
-						
-						
-	   					<div class="col-sm-4 col-lg-3" style="background-color:lavender; width: 40%;">
-	   						<h4>
-	   							Project 6
-	   						</h4>
-	   						<img class="image" src="" alt="image">
-	   						<ul>
-								<li ng-repeat="x in custInfo | filter:test ">
-										{{ (x.name[5].names | filter:test) + ', ' + x.name[5].country  }}
-								</li>
-							</ul>
-	   					</div>
-						
-						
-						<div class="col-sm-4 col-lg-1">
-						
-						</div>
-						
-	     			</div>
-				</div>
-				</div>
-		</div>
-			
-
-			</div>
-  </div>
-</div>
-
-
-
-
 
 
 
@@ -557,4 +382,5 @@
 
 
 </body>
+
 </html>
