--- a/public/app/views/faq-ngomodel.html
+++ b/public/app/views/faq-ngomodel.html
@@ -35,7 +35,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">fundsOfHope</a>
+      <a class="navbar-brand" href="home.html">FundsofHope</a>
     </div>
 <!-- Left navbar -->
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -339,7 +339,7 @@
                         </div>
                         <div class="panel-collapse collapse" id="collapseSix">
                             <div class="panel-body">
-                    Of course.
+Of course.
 							</div>
                         </div>
                     </div>
