--- a/public/app/views/pog.html
+++ b/public/app/views/pog.html
@@ -68,7 +68,7 @@ setInterval(function() {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">fundsOfHope</a>
+      <a class="navbar-brand" href="home.html">FundsofHope</a>
     </div>
 <!-- Left navbar -->
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -290,21 +290,21 @@ setInterval(function() {
 
 <div id="slideshow1">
    <div>
-   <img src="app/views/images/bbc1.png" alt="BBC" width="100%" height="100%">
+   <img src="images/bbc1.png" alt="BBC" width="100%" height="100%">
    </div>
 
      <div>
-   <img src="app/views/images/bbc1.png" alt="BBC" width="100%" height="100%">
+   <img src="images/bbc1.png" alt="BBC" width="100%" height="100%">
    </div>
    
  <div>
-     <img src="app/views/images/cnn.png" alt="CNN" width="100%" height="100%">
+     <img src="images/cnn.png" alt="CNN" width="100%" height="100%">
    </div>
    <div>
-     <img src="app/views/images/et.cms" alt="ET" width="100%" height="100%">
+     <img src="images/et.cms" alt="ET" width="100%" height="100%">
    </div>
       <div>
-     <img src="app/views/images/nyt.jpg" alt="NYT" width="100%" height="100%">
+     <img src="images/nyt.jpg" alt="NYT" width="100%" height="100%">
    </div>
    
 </div>
@@ -330,7 +330,7 @@ setInterval(function() {
 </div>
 
 <div class="col-sm-3 col-md-6 pull-right">	
-<img src="app/views/images/deloitte.jpg" alt="NYT" width="90%" height="80%" class="img-rounded" style="border: shade">
+<img src="images/deloitte.jpg" alt="NYT" width="90%" height="80%" class="img-rounded" style="border: shade">
 </div>
 </div>
 
@@ -390,40 +390,40 @@ setInterval(function() {
 <div class="col-sm-3 col-md-6">
 <div id="slideshow2">
      <div>
-   <img src="app/views/images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/4.jpg" alt="BBC" width="100%" height="100%">
    </div>
 <div>
-   <img src="app/views/images/plogos/12.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/12.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/8.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/8.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/16.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/16.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/3.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/3.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/7.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/7.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/11.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/11.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/15.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/15.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/17.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/17.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/14.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/14.jpg" alt="BBC" width="100%" height="100%">
    </div>
    <div>
-   <img src="app/views/images/plogos/6.jpg" alt="BBC" width="100%" height="100%">
+   <img src="images/plogos/6.jpg" alt="BBC" width="100%" height="100%">
    </div>
    
 </div>
