--- a/public/app/views/stheh.html
+++ b/public/app/views/stheh.html
@@ -35,7 +35,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">fundsOfHope</a>
+      <a class="navbar-brand" href="home.html">FundsofHope</a>
     </div>
 <!-- Left navbar -->
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -267,13 +267,31 @@
 <div class="container" style="color: #251e1c;">
 
 
-            <div class="col-sm-3 col-md-8 col-lg-10" style="background-color: #ea8662";>
+            <div class="col-sm-10 col-md-8 col-lg-10" style="background-color: #ea8662";>
 	
 	<h1>Initiate</h1>
 	
-	 <p>Make A Change By Taking Your FIRST STEP</p>
+	 <h3>Make A Change By Taking Your FIRST STEP</h3>
 	 
-	 <h2>Why:</h2>
+ <h3>Sign Up ON Our Website Using Email</h3>
+      
+
+<img src="images/screenshots/screen5.png" class="img-responsive" alt="Responsive image">
+
+
+ <h3>Sign In Using Email,Twitter,Facebook or Google</h3>
+
+
+<br>
+<img src="images/screenshots/screen2.png" class="img-responsive" alt="Responsive image">
+
+
+
+
+
+
+
+	 <h3>Why:</h3>
 	 
 	  <h3>More Than 805 Million People Are Suffering From Hunger Today.</h3>
 	<div class="embed-responsive embed-responsive-16by9">  
@@ -282,15 +300,6 @@
 	  <br>
 	  
 	  
-	   <h3>Way Too Many People Are Homeless Today</h3>
-  <img src="app/views/images/whyphoto/5.jpeg" alt="..." class="img-rounded" style="background-color: #f2e3ce; border;"></img>
-	  
-	  <h3>But Most Importantly To Break The Social Barriers Of Injustice</h3>
-	
-	
-	 <img src="app/views/images/whyphoto/1.jpg" alt="..." class="img-rounded" style="background-color: #f2e3ce;"></img>
-<br><br><br>
-
 	 </div>
 	  </div>
 	  
