--- a/public/app/views/faq-searchqueries.html
+++ b/public/app/views/faq-searchqueries.html
@@ -9,8 +9,8 @@
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
- 	<script type="text/javascript" src="./angular.js"></script>
-	<script type="text/javascript" src="app_script.js"></script>
+ 	<script type="text/javascript" src="/js/angular.js"></script>
+	<script type="text/javascript" src="/js/app_script.js"></script>
    <style>
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
@@ -36,7 +36,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">fundsOfHope</a>
+      <a class="navbar-brand" href="home.html">FundsofHope</a>
     </div>
 <!-- Left navbar -->
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -249,45 +249,38 @@
 
 
 
-<div class="col-sm-3 col-md-6 col-lg-8"  style="color: #848484;">
+<div class="col-sm-3 col-md-6 col-lg-8">
 
 <div class="row">
 
-            <div class="col-lg-9" >
-			<div ng-app: "myApp" ng-controller="namescontroller">
+            <div class="col-sm-5 col-md-6 col-lg-8">
+			<div ng-controller="namescontroller">
 				<div>
-					<h2 style=" margin-left: 45%; font-size: 30px; font-family: sans serif;">
+					<h2 style="margin-left:; font-family: helvatica; color: white;">
 						Search your questions here...
 					</h2>
-					<input type="text" placeholder="ask here....." value="" ng-model="test" style="width: 90%; margin-left: 35%;"></input>
+					<input type="text" placeholder="ask here....." value="" ng-model="test" style="width: 70%;"></input>
 				</div>
-        <br/>
 				<div>
 					<ol class="questions">
-						<li style="margin-left: 35%; font-size: 20px;" ng-repeat="x in ques | filter: test | limitTo: 3">
+						<li style="color: white; font-family: georgia; margin-top: 3%;"ng-repeat="x in ques | filter: test ">
 							{{(x.question| uppercase)}}<br/>
               {{x.answer}}
 						</li>
 					</ol>
 				</div>
 			</div>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			</div>
+			</div>
 			</div>
 
-			</div>
-			</div>
-
-<div class="jumbotron" style="background-color: #2c3e50; color:#c6c9cc">
-<div class="container">
-<div class="col-sm-3 col-md-6 col-lg-8">
-<br><br><br><br><br><br><br><br><br><br><br>
-</div>
-</div>
-</div>			
+			
 
 <div class="jumbotron" style="background-color: #2c3e50; color:#c6c9cc">
 <div class="container">
  <div class="row">
- <div class="col-md-3 col-sm-4" style="background-color: #2c3e50; ">
+ <div class="col-md-3 col-sm-4" style="background-color: #2c3e50;">
 
  <dl>
   <dt>Why Donate</dt>
