--- a/public/app/views/help.html
+++ b/public/app/views/help.html
@@ -18,6 +18,10 @@
   max-height: 550px;
       margin: auto;
   }
+  #asd{
+    height:75%;
+    width: 75%;
+  }
   </style>
  
  <script>
@@ -53,7 +57,7 @@ setInterval(function() {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">fundsOfHope</a>
+      <a class="navbar-brand" href="home.html">FundsofHope</a>
     </div>
 <!-- Left navbar -->
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -258,35 +262,33 @@ setInterval(function() {
 <div class="jumbotron" style="background-color: #c7c5c2;">
 	<div class="container" style="color: #6c4837;">
 
-	<div class="col-sm-3 col-md-6 col-lg-8">	
+	<div class="col-sm-3 col-md-6 col-lg-12">	
 <h2>As Volunteers And Donors</h2>
 <p>Browse Through Our Registered Projects And Stay Connected</p>
+<row>
+<div class="col-sm-3col-md-6 col-lg-3"> 
+<h2>How Help</h2>
+
+<dl>
+  <dt>Volunteer</dt>
+  <dd>Teach Children/Disabled</dd>
+  <dd>Take Care Of Elderly</dd>
+</dl>
+
+<dl>
+ <dt>Donate</dt>
+  <dd>Goods Of Any Kind</dd>
+  <dd>Money Through Any Gateway</dd>
+</dl>
 
 
-<div id="slideshow3">
-   <div>
-   <img src="app/views/images/beavol/1.jpg" alt="BBC" width="100%" height="100%">
-   </div>
 
-     <div>
-   <img src="app/views/images/beavol/1.jpg" alt="BBC" width="100%" height="100%">
-   </div>
-   
- <div>
-     <img src="app/views/images/beavol/2.jpg" alt="CNN" width="100%" height="100%">
-   </div>
-   <div>
-     <img src="app/views/images/beavol/3.jpg" alt="ET" width="100%" height="100%">
-   </div>
-      <div>
-     <img src="app/views/images/beavol/4.jpg" alt="NYT" width="100%" height="100%">
-   </div>
-   
+</div>
+<div class="col-sm-8 col-md-6 col-lg-5"> 
+<img src="/images/charts/2.png" class="img-responsive" alt="Responsive image">
 </div>
 
-	</div>
-
-
+</row>
 	</div>
 </div>
 
@@ -297,21 +299,46 @@ setInterval(function() {
 <div class="container" style="color: #d9c1ba;">
 
 
+<row>
 
 
-
-<div class="col-sm-3 col-md-6">	
+<div class="col-sm-3 col-md-6 col-lg-10">	
 <h2>As Registered NGOs</h2>
-<p>Browse Through Our Projects And Stay Connected</p>
+<p>Upload Projects For A Better Management</p>
 
 
-			
-	<div class="embed-responsive embed-responsive-16by9">  
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vGOgyaSrJko"></iframe>
-	  </div>	
 
 
 </div>
+
+</row>
+
+
+<row>
+
+<div class="col-sm-8 col-md-6 col-lg-5"> 
+<img src="/images/charts/4.jpg" class="img-responsive" alt="Responsive image">
+</div>
+
+<div class="col-sm-4"> 
+<h2>How we can help</h2>
+<dl>
+ <dt>Project Management</dt>
+  <dd>Help You Reach More Volunteers</dd>
+  <dd>Better Marketing Of Projects</dd>
+ 
+</dl>
+
+<dl>
+  <dt>Funds Guidance</dt>
+  <dd>Better Cash Flow</dd>
+</dl>
+
+</div>
+
+</row>
+
+
 
 
 </div>
@@ -330,19 +357,25 @@ setInterval(function() {
 
         <div class="row">
 
-            <div class="col-sm-3 col-md-6">
                <h2>As A Coorporate </h2>
 <p>Register As a Partner And Encourage Your Employees</p>
 			
-		<div class="embed-responsive embed-responsive-16by9">  
-<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/R_A4lTYnbzQ"></iframe>
-	  </div>
-			
-			
-			
-				</div>
+			</div>
 
            
+
+
+<row>
+<p>5 point Refferal Chart</p>
+<div class="col-sm-8 col-md-6 col-lg-8"> 
+<img id="asd" src="/images/charts/3.png" class="img-responsive" alt="Responsive image">
+</div>
+
+</row>
+
+
+
+
 
 
 </div>
