--- a/public/app/views/stheh2.html
+++ b/public/app/views/stheh2.html
@@ -35,7 +35,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">fundsOfHope</a>
+      <a class="navbar-brand" href="home.html">FundsofHope</a>
     </div>
 <!-- Left navbar -->
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -274,7 +274,40 @@
 	
 	 <p>Make A Change By Taking Your FIRST STEP</p>
 	 
+
+
+
+    <h3>Explore Projects To Join And Be A Part</h3>
 	 
+<img src="images/screenshots/screen3.png" class="img-responsive" alt="Responsive image">
+
+
+
+
+
+ <h3>Individual Projects Can Be Viewed By Clicking On The Home</h3>
+
+
+
+
+<img src="images/screenshots/screen4.png" class="img-responsive" alt="Responsive image">
+
+<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	 </div>
 	  </div>
 	  
