--- a/public/app/views/stheh3.html
+++ b/public/app/views/stheh3.html
@@ -35,7 +35,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">fundsOfHope</a>
+      <a class="navbar-brand" href="home.html">FundsofHope</a>
     </div>
 <!-- Left navbar -->
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -275,6 +275,11 @@
 	
 	 <p>Make A Change By Taking Your FIRST STEP</p>
 	 
+
+
+
+
+    <h3>View Progress Of Projects U Have Joined</h3>
 	 
 
 	 </div>
