--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -39,7 +39,7 @@
 
 
 <script src="../../js/angular.js"></script>
-<script src="../../app/controllers/controller.js"></script>
+<script src="../controllers/testController.js"></script>
 <link src="./search_style.css" />
    <style>
   .carousel-inner > .item > img,
