--- a/public/css/stylesheet1.css
+++ b/public/css/stylesheet1.css
@@ -28,18 +28,17 @@
     #cards {
       @apply(--layout-vertical);
       @apply(--center-justified);
-      elevation: 6px;
       max-width: 300px;
       margin-top: 10%;
       margin-left: 5%;
       margin-right: auto;
-      display: :inline-block;
+      display: inline-block;
     }
 
     paper-card {
       width: 100%;
       margin-bottom: 16px;
-      display: :inline-block;
+      display: inline-block;
       float:left;
     }
     .card-content{
@@ -50,7 +49,7 @@
     }
     #image{
     	height: 150px;
-    	background-image: url("images/img1.jpg");
+    	background-image: url("../images/img1.jpg");
     }
     .card-actions paper-icon-button{
 
@@ -69,7 +68,6 @@
             @apply(--layout-horizontal);
             @apply(--layout-center-justified);
             font-size: 18px;
-            font-family: ;
             margin-left: 8%;
             margin-right: 0%;
     }    
