--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -4,7 +4,7 @@
   <title>fundsOfHope.org::Home</title>
                                   <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="../../css/bootstrap.css">
+          <link rel="stylesheet" href="../../css/bootstrap.min.css">
 
           <script src="../../js/jquery-1.11.3.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
