--- a/public/app/views/pog.html
+++ b/public/app/views/pog.html
@@ -301,7 +301,7 @@ setInterval(function() {
      <img src="../../images/cnn.png" alt="CNN" width="100%" height="100%">
    </div>
    <div>
-     <img src="../../images/et.cms" alt="ET" width="100%" height="100%">
+     <img src="../../images/et.png" alt="ET" width="100%" height="100%">
    </div>
       <div>
      <img src="../../images/nyt.jpg" alt="NYT" width="100%" height="100%">
